--- a/main.html
+++ b/main.html
@@ -8,7 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<h2>increment-counter</h2>
+
+  <p id="counter">0</p>
+
+  <button id="incrementBtn">Increment</button>
+  <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
